refactor: standardize domain (Product, Category and Brand) validation and improve entity consistency